--- a/pvFactory/textupdate.htm
+++ b/pvFactory/textupdate.htm
@@ -28,6 +28,10 @@
       rule! For a color value, the PV us used.
   <LI><B>Bg Color:</B><br>
       The background color, only used when <I>filled</I> is checked.
+  <LI><B>Color PV:</B><br>
+      <I>IF</I> the foreground color is rule-based, a color PV
+      can be specified to determine the color value.
+      Per default, the primary PV is used.
   <LI><B>Font:</B><br>
       The font.
   </UL>
