--- a/helpFiles/index.htm
+++ b/helpFiles/index.htm
@@ -11,6 +11,7 @@
 <h2>General</h2>
 
 <UL>
+<LI><a href="setup.htm">EDM Setup</a>
 <LI><a href="pv.htm">PV, ProcessVariables</a>
 <LI><a href="calcpv.htm">CALC PV</a>
 </UL>
