--- a/helpFiles/index.htm
+++ b/helpFiles/index.htm
@@ -12,6 +12,7 @@
 
 <UL>
 <LI><a href="setup.htm">EDM Setup</a>
+<LI><a href="colors.htm">Colors</a>
 <LI><a href="pv.htm">PV, ProcessVariables</a>
 <LI><a href="calcpv.htm">CALC PV</a>
 </UL>
