add statictext.htm and regtext.htm to widget list

--- a/helpFiles/index.htm
+++ b/helpFiles/index.htm
@@ -20,6 +20,8 @@
 <h2>Widgets</h2>
 
 <UL>
+<LI><a href="statictext.htm">Static Text</a>
+<LI><a href="regtext.htm">RegText</a>
 <LI><a href="textupdate.htm">Textupdate</a>
 <LI><a href="textentry.htm">Textentry</a>
 <LI><a href="regtextupdate.htm">RegTextupdate</a>
