fixed HTML error

--- a/helpFiles/colors.htm
+++ b/helpFiles/colors.htm
@@ -124,7 +124,7 @@ alarm {
 </pre>
 
 The specification for the no alarm state may either be a valid color
-name or "&ast&";. In the latter case, the object's foreground color determine the non-alarm color.
+name or "*". In the latter case, the object's foreground color determine the non-alarm color.
 
 <h3>Menu Map</h3>
 Per default, all static and rule-based colors are displayed in
