adjusted EDMDATAFILES info

--- a/helpFiles/setup.htm
+++ b/helpFiles/setup.htm
@@ -24,10 +24,9 @@ the available command-line options and environment variables.
 <LI><B>EDMPVOBJECTS</B><br>
     Location of edmPvObjects, the edm pv component object file
 <LI><B>EDMDATAFILES</B><br>
-    Location of display files given as
-    <pre>&lt;system file path&gt;:&lt;user file path&gt;</pre>
-     Example: "/usr/officialDisplays:/home/me/myDisplays".
-     If &lt;user file path&gt; is omitted, "./" is used
+    Location of display files given as a search path similar
+    to the PATH variable. Example:
+    <pre>.:/sns/edl/share:/sns/linac/share</pre>
 <LI><B>EDMUSERLIB</B><br>
      Location of user shared library file
 <LI><B>EDMHELPFILES</B><br>
